Mon Dec 14 13:58:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/query_id.py: Test query_id for correct
	  serialisation.

Mon Dec 14 13:54:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Fix argument serialisation for query
	  constructors which have no default arguments: fixes
	  evalable_repr() for queries created with query_id().

Mon Dec 14 13:47:26 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/searchconnection.py: Tie in
	  facets and stats from the cache.

Mon Dec 14 13:45:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Implement get_facets() properly.

Mon Dec 14 11:41:35 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add storage of statistics and
	  facets to the cache.

Thu Dec 10 11:34:07 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/highlight.py: Use thread local storage correctly - make the
	  "stemmers" dict on demand in each thread.

Thu Dec 10 11:28:01 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/highlight.py: Cache the stemmers, and the results of the
	  stemmers, in thread local storage, to allow the cache to be
	  reused across uses of the Highlighter.  Based on a patch from
	  Bruno Rezende.

Wed Dec 09 13:09:35 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Add stats_checkatleast, to allow the
	  value of checkatleast when calculating stats to be set.

Wed Dec 09 12:05:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/mset_search_results.py,
	  xappy/searchresults.py: Get the start and end rank from the
	  ordering instead of the stats; makes a lot more sense this way.

Wed Dec 09 03:24:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/utils.py: Add missing import of "math".

Wed Dec 09 03:20:51 GMT 2009  Richard Boulton <richard@tartarus.org>
